--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="game-board">
+    <img src="/img/clouds.png" class="nuvem">
+        <img src=/
+        </div>
 </body>
 </html>
