--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Mario</title>
+    <title>bola</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-board">
-    <img src="/img/clouds.png" class="nuvem">
-        <img src=/
-        </div>
+        <img src="/img/clouds.png" class="nuvem">
+        <img src="/img/mario.gif" class="mario">
+        <img src="/img/pipe.png" class="pipe>
+    </div>
 </body>
 </html>
